Colaboratory를 통해 생성됨

--- a/Chapter_02_컬렉션_타입의_이해(list,_tuple).ipynb
+++ b/Chapter_02_컬렉션_타입의_이해(list,_tuple).ipynb
@@ -76,6 +76,40 @@
       ]
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BWhVSx4eLejn",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "04dd4364-bff8-4f0a-8c80-b1ca5a7a6fb2"
+      },
+      "source": [
+        "a=[]\n",
+        "print(a)\n",
+        "\n",
+        "b=[1,2,3,4,5,10]\n",
+        "print(b)\n",
+        "\n",
+        "c=['korea','canada',1,2,[34,35]]\n",
+        "print(c)"
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[]\n",
+            "[1, 2, 3, 4, 5, 10]\n",
+            "['korea', 'canada', 1, 2, [34, 35]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "97UgtlnUVAD2",
@@ -89,15 +123,34 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "vIzD3foZVAD3",
+        "id": "R8xRnmJCMAym",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "1136b550-c612-4b5f-d14d-5d1012721cb5"
       },
       "source": [
-        ""
+        "a='hello world'\n",
+        "b=list(a)\n",
+        "print(b)\n",
+        "\n",
+        "c=(1,2,3)\n",
+        "d=list(c)\n",
+        "print(d)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['h', 'e', 'l', 'l', 'o', ' ', 'w', 'o', 'r', 'l', 'd']\n",
+            "[1, 2, 3]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -115,13 +168,27 @@
       "metadata": {
         "id": "izQJ3qydVAD-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "eb0df029-a541-4120-8114-476a697770b0"
       },
       "source": [
-        ""
+        "a='hello world nice weather'\n",
+        "b=a.split()\n",
+        "print(b)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "['hello', 'world', 'nice', 'weather']\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -141,6 +208,36 @@
       "cell_type": "code",
       "metadata": {
         "id": "uWL7mhB8VAEE",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 71
+        },
+        "outputId": "b1d2024a-fee9-4955-f8e1-1ff46b71b0d5"
+      },
+      "source": [
+        "a=[1,2,3,4,5,6]\n",
+        "print(a[2])\n",
+        "print(a[5])\n",
+        "print(a[-1])"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "3\n",
+            "6\n",
+            "6\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "D9k9uZI1M8uE",
         "colab_type": "code",
         "colab": {}
       },
@@ -166,13 +263,68 @@
       "metadata": {
         "id": "caJ8QS4hVAEI",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 89
+        },
+        "outputId": "a1940aa9-651b-49df-b434-88cc2bf3844c"
       },
       "source": [
-        ""
+        "# 문자열은 불변객체(immutable)\n",
+        "a='hello world'\n",
+        "print(a[0])\n",
+        "\n",
+        "## a[0]='j'  이것은 실행이 되지 않는다.\n",
+        "c=\"j\"+a[1:]\n",
+        "print(c)\n",
+        "\n",
+        "d=a.replace('h','j')\n",
+        "print(d)\n",
+        "print(a)\n",
+        "\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "h\n",
+            "jello world\n",
+            "jello world\n",
+            "hello world\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "VisHQ-j3NVaD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "4111f110-c898-4017-d950-78094deedb1b"
+      },
+      "source": [
+        "# 숫자열 리스트는 mutable 변경가능한 객체\n",
+        "a=[1,2,3,4,5,6]\n",
+        "a[0]=100\n",
+        "a[-1]=95\n",
+        "print(a)"
+      ],
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[100, 2, 3, 4, 5, 95]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -191,13 +343,46 @@
       "metadata": {
         "id": "26G74wiQVAEN",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 179
+        },
+        "outputId": "d0e80f92-06ee-49fc-a3e6-504da74214fb"
       },
       "source": [
-        ""
+        "a=[1,2,3,4,5,6,7,8]\n",
+        "len(a)\n",
+        "print(a[4:7])\n",
+        "print(a[:7])\n",
+        "print(a[3:])\n",
+        "print(a[:])\n",
+        "\n",
+        "print('===========================================================')\n",
+        "# slicing\n",
+        "# statr:end:increment\n",
+        "print(a[1:7:1])\n",
+        "print(a[1:7:2])\n",
+        "print(a[1:7:4])\n",
+        "print(a[1:7:6])"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[5, 6, 7]\n",
+            "[1, 2, 3, 4, 5, 6, 7]\n",
+            "[4, 5, 6, 7, 8]\n",
+            "[1, 2, 3, 4, 5, 6, 7, 8]\n",
+            "===========================================================\n",
+            "[2, 3, 4, 5, 6, 7]\n",
+            "[2, 4, 6]\n",
+            "[2, 6]\n",
+            "[2]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -227,13 +412,27 @@
       "metadata": {
         "id": "f_mHsgEKVAET",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "bc7d6182-1c22-4b00-84e0-40b65d147e76"
       },
       "source": [
-        ""
+        "a=[1,2,3,4,5]\n",
+        "a.append(10)\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 10]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -252,13 +451,84 @@
       "metadata": {
         "id": "rEGrrQEXVAEZ",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "80b9c987-2dd7-4d10-dc15-2bf9882c9b58"
       },
       "source": [
-        ""
+        "a=[1,2,3,4,5]\n",
+        "b=[6,7,8,9,10]\n",
+        "a.append(b)\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 43,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, [6, 7, 8, 9, 10]]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "WF6QpL8ERvPq",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f73c2b67-30bb-4375-e825-d4d8d9367d02"
+      },
+      "source": [
+        "a=[1,2,3,4,5]\n",
+        "b=[6,7,8,9,10]\n",
+        "a.extend(b)\n",
+        "print(a)"
+      ],
+      "execution_count": 44,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "IPHyqyW6SLsP",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "8a3e6191-44c9-4fbe-ba63-1f801f33e0e8"
+      },
+      "source": [
+        "a=[1,2,3,4,5]\n",
+        "b=[6,7,8,9,10]\n",
+        "c=a+b\n",
+        "print(c)"
+      ],
+      "execution_count": 45,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5, 6, 7, 8, 9, 10]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -270,6 +540,33 @@
         "+ **insert()로 항목추가**\n",
         " * 리스트의 원하는 위치에 추가 가능\n",
         " * 앞에 인덱스를, 뒤에 아이템을 명시"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "f8QHIeSISYnH",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "ba1e5395-fcf1-40dc-dc10-e66f621b891c"
+      },
+      "source": [
+        "a=[1,2,3,4,5]\n",
+        "a.insert(1,100)\n",
+        "print(a)"
+      ],
+      "execution_count": 47,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 100, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
@@ -288,13 +585,27 @@
       "metadata": {
         "id": "ByRJHf6EVAEi",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "72150606-fa3e-467f-d4a4-1f1e615e2471"
       },
       "source": [
-        ""
+        "a=[1,2,3,3,4,5]\n",
+        "a.remove(3) # remove() 괄호안에는 값이 들어간다.\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 49,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -312,13 +623,29 @@
       "metadata": {
         "id": "xjs6Gu6fVAEn",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "a473f62d-e5fe-4c0e-fb4d-8172f9e3d432"
       },
       "source": [
-        ""
+        "a=[1,2,3,7,4,5]\n",
+        "d=a.pop(3)\n",
+        "print(a)\n",
+        "print(d)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 51,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[1, 2, 3, 4, 5]\n",
+            "7\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -336,13 +663,26 @@
       "metadata": {
         "id": "yn8aAuB5VAEt",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "a483f9cd-a609-4ec3-f615-5ce1e8021c44"
       },
       "source": [
-        ""
+        "a=[1,2,3,7,4,5]\n",
+        "a.index(5)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 55,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -362,13 +702,28 @@
       "metadata": {
         "id": "Vw0Vp9oXVAEy",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "5a9c94ba-d39f-4f02-f376-e825f53a4f7d"
       },
       "source": [
-        ""
+        "a=[1,2,3,7,4,5]\n",
+        "b=7\n",
+        "c=b in a\n",
+        "print(c)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 58,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "True\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -400,13 +755,57 @@
       "metadata": {
         "id": "68pvLfxOVAE5",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "f2ef2581-037a-497d-f4da-84366ceae86a"
       },
       "source": [
-        ""
+        "a=[9,11,4,54,21,32,11]\n",
+        "a.sort()\n",
+        "print(a)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[4, 9, 11, 11, 21, 32, 54]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "EnsF0KyZU9ma",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "6ed125b6-539d-45be-86d2-efcad613793b"
+      },
+      "source": [
+        "a=[9,11,4,54,21,32,11]\n",
+        "a.sort(reverse=True)\n",
+        "b=sorted(a)\n",
+        "print(a)\n",
+        "print(b)"
+      ],
+      "execution_count": 65,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "[54, 32, 21, 11, 11, 9, 4]\n",
+            "[4, 9, 11, 11, 21, 32, 54]\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -425,13 +824,48 @@
       "metadata": {
         "id": "VFlyxTLAVAE-",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 298
+        },
+        "outputId": "1aa3619f-46d9-40ff-93c6-d050262c01d5"
       },
       "source": [
-        ""
+        "a=[1,2,3]\n",
+        "b=(1,2,3)\n",
+        "print(type(a))\n",
+        "print(type(b))\n",
+        "\n",
+        "a[0]=100\n",
+        "print(a)\n",
+        "\n",
+        "b[0]=100\n",
+        "print(b)\n",
+        " "
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "<class 'list'>\n",
+            "<class 'tuple'>\n",
+            "[100, 2, 3]\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-68-3f9a944ea395>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0ma\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0mb\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m100\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mb\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -449,13 +883,26 @@
       "metadata": {
         "id": "xyHUbmwoVAFD",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "85657992-bfa9-4c0d-c6d8-9d1d892d5055"
       },
       "source": [
-        ""
+        "a,b,c,d=100,200,300,400\n",
+        "print(a,b,c,d)"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 71,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "100 200 300 400\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -472,13 +919,64 @@
       "metadata": {
         "id": "8hUdet3xVAFH",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 53
+        },
+        "outputId": "39783660-39db-4cf6-ce01-9cf99248987c"
       },
       "source": [
-        ""
+        "a=5\n",
+        "b=4\n",
+        "\n",
+        "print(a,b)\n",
+        "\n",
+        "# logic\n",
+        "temp=a\n",
+        "a=b\n",
+        "b=temp\n",
+        "\n",
+        "print(a,b)\n"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 77,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5 4\n",
+            "4 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9HDzFvhVXzXf",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "7469082b-e954-4f7d-99ed-478cb473170a"
+      },
+      "source": [
+        "a=5\n",
+        "b=4\n",
+        "a,b=b,a\n",
+        "print(a,b)"
+      ],
+      "execution_count": 76,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "4 5\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
